Adjust gc settings for ptb [stage]