@@ -168,14 +168,17 @@ project.ext {
 
     // GC config
     jvmRunArgs += [
+            '-Xlog:gc',
             '-XX:+UseG1GC',
             '-Xms300m',
             '-Xmx4G',
             '-XX:GCTimeRatio=9',
             '-XX:+UseStringDeduplication',
-            // This is very important for older Windows systems
-            // The default of 2m makes GC pauses 100x times longer for some reason
-            '-XX:G1HeapRegionSize=4m'
+            '-XX:+PrintGCDetails',
+            // These are very important for some (mostly slower) systems
+            // The default makes GC pauses 100x times longer for some reason
+            '-XX:G1HeapRegionSize=1m',
+            '-XX:MaxGCPauseMillis=2000'
     ];
 
     // Fix platform theme detection on macOS
